Selecting elements from the DOM.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button type="button" id="changeColour">Change Colour</button>
 
     <div id="colourDisplay">
-        <p>Current Colour: <span id="hexCode">#FFFFFF</span></p>
+        <p>Current Colour: <span id="colourCode">#FFFFFF</span></p>
     </div>
 
     
