--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Mood to Colour</h1>
 
     <label for="mood">How are you feeling?</label>
-    <select name="moods" id ="mood">
+    <select id ="mood">
         <option value="happy">Happy</option>
         <option value="sad">Sad</option>
         <option value="calm">Calm</option>
